fix some errors on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -31,12 +31,10 @@ form h3{
   padding:1em 0;
 }
 .blog-content h1, .blog-content h2 {
-  margin-left:1em;
-  margin-top:1em;
+  margin:1em;
 }
 .blog-content p{
-  margin-left:2em;
-  margin-top:1em;
+  margin:1em 1.5em;
 }
 html {
   scroll-behavior: smooth;
